--- a/One-Page Website/CSS/one_page_website.css
+++ b/One-Page Website/CSS/one_page_website.css
@@ -1,10 +1,45 @@
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
+    text-align: center;
+}
+
+h3 {
+    font-family: Georgia;
+    color: #372d44;
+}
+
+td,
+h4 {
+	text-align: center;
+}
+
+table {
+	border: 3px solid silver;
+}
+
+a {
+	text-decoration: none;
+	
+}
+
+footer {
+	background-color: yellow;
+}
+
+.container {
+    background-color: #dddddd
+}
+
+#price {
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #222222
 }
 
 #contact input[type="text"] {
-    padding: 2% 1% 2% 5%;
+    padding: 2% 3.42% 2% 3.42%;
     width: 15%;
     border-top: 2px solid #090B0D;
     border-right: 4px solid #424549;
@@ -12,6 +47,9 @@ h1 {
     border-left: 2px solid #090B0D;
     margin: 10px 1em;
     border-radius: 10px;
+    text-align: center;
+    font-size: 16px;
+    
 }
 #contact form {
     font-size: 15px;
@@ -26,4 +64,138 @@ h1 {
     background: rgb(227,222,222);
     box-shadow: 2px 3px 3px 0px rgba(0,0,0,0.3);
     font-family: 'Raleway', sans-serif;
+}
+
+/* LIGHTBOX SECTION */
+
+.row > .column {
+    padding: 0 8px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Create five equal columns that floats next to eachother */
+.column {
+    float: left;
+    width: 19%;
+}
+.column1 {
+    float: left;
+    text-align: center;
+    width: 19%;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.99);
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    width: 90%;
+    max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Hide the slides by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color wiith a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* Caption text */
+.caption-container {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+}
+
+img.demo {
+    opacity: 0.6;
+    margin-bottom: 70%;
+}
+
+.active,
+.demo:hover {
+    opacity: 1;
+}
+
+img.hover-shadow {
+    transition: 0.3s;
+}
+
+.hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
